<resources>
    <string name="app_name">My Application</string>
    <string name="app_new_name">Avengers</string>
    <string name="mobile_number">Enter mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="preference_file_name">Avengers Preferences</string>
</resources>